# todo-list

./: .coveragerc  .env_sample  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  pyproject.toml  pytest.ini
src/django_framework/todo_list/: manage.py
src/django_framework/todo_list/apps/users/: admin.py  apps.py  forms.py  manager.py  mixins.py  models.py
src/django_framework/todo_list/apps/users/migrations/: 0001_initial.py
src/django_framework/todo_list/config/: wsgi.py
src/django_framework/todo_list/settings/: base.py  local.py  test.py
tests/unit/: test_user.py
