[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Andres Plazas <apr@certainly.io>"]
readme = "README.md"
packages = [{include = "todo_list", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-stubs = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"
isort = "^5.12.0"
black = "^23.1.0"
pylint = "^2.16.2"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
